D16_用 Pandas 執行聚合運算(Split-Apply-Combine Strategy)
下載答案

--- a/D16_用 Pandas 執行聚合運算(Split-Apply-Combine Strategy)/作業解答(更新).ipynb
+++ b/D16_用 Pandas 執行聚合運算(Split-Apply-Combine Strategy)/作業解答(更新).ipynb
@@ -6,7 +6,7 @@
     "id": "WpY62-EDcs8F"
    },
    "source": [
-    "作業目標:<br>\n",
+    "作業目標:<br>\r\n",
     "1. 熟悉分組計算"
    ]
   },
@@ -16,7 +16,7 @@
     "id": "pXYQs1_9a6He"
    },
    "source": [
-    "作業重點: <br>\n",
+    "作業重點: <br>\r\n",
     "1. 分組計算也可以加入apply自定義的函數"
    ]
   },
@@ -26,16 +26,16 @@
     "id": "vysasgqxcupS"
    },
    "source": [
-    "題目 : 運用下列分數資料分析<br>\n",
-    "1. 找出全年級各科成績最高分與最低分?<br>\n",
-    "2. 找出數學班平均最高的班級?<br>\n",
-    "3. 分析全校女生與男生國文平均差幾分?<br>\n",
+    "題目 : 運用下列分數資料分析<br>\r\n",
+    "1. 找出全年級各科成績最高分與最低分?<br>\r\n",
+    "2. 找出數學班平均最高的班級?<br>\r\n",
+    "3. 分析全校女生與男生國文平均差幾分?<br>\r\n",
     "score_df = pd.DataFrame([[1,50,80,70,'boy',1],[2,60,45,50,'boy',2],[3,98,43,55,'boy',1],[4,70,69,89,'boy',2],[5,56,79,60,'girl',1],[6,60,68,55,'girl',2],[7,45,70,77,'girl',1],[8,55,77,76,'girl',2],[9,25,57,60,'girl',1],[10,88,40,43,'girl',3],[11,25,60,45,'boy',3],[12,80,60,23,'boy',3],[13,20,90,66,'girl',3],[14,50,50,50,'girl',3],[15,89,67,77,'girl',3]],columns=['student_id','math_score','english_score','chinese_score','sex','class'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -244,91 +244,87 @@
        "14          15          89             67             77  girl      3"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "score_df = pd.DataFrame([[1,50,80,70,'boy',1], \n",
-    "              [2,60,45,50,'boy',2],\n",
-    "              [3,98,43,55,'boy',1],\n",
-    "              [4,70,69,89,'boy',2],\n",
-    "              [5,56,79,60,'girl',1],\n",
-    "              [6,60,68,55,'girl',2],\n",
-    "              [7,45,70,77,'girl',1],\n",
-    "              [8,55,77,76,'girl',2],\n",
-    "              [9,25,57,60,'girl',1],\n",
-    "              [10,88,40,43,'girl',3],\n",
-    "              [11,25,60,45,'boy',3],\n",
-    "              [12,80,60,23,'boy',3],\n",
-    "              [13,20,90,66,'girl',3],\n",
-    "              [14,50,50,50,'girl',3],\n",
-    "              [15,89,67,77,'girl',3]],columns=['student_id','math_score','english_score','chinese_score','sex','class'])\n",
+    "import pandas as pd\r\n",
+    "score_df = pd.DataFrame([[1,50,80,70,'boy',1], \r\n",
+    "              [2,60,45,50,'boy',2],\r\n",
+    "              [3,98,43,55,'boy',1],\r\n",
+    "              [4,70,69,89,'boy',2],\r\n",
+    "              [5,56,79,60,'girl',1],\r\n",
+    "              [6,60,68,55,'girl',2],\r\n",
+    "              [7,45,70,77,'girl',1],\r\n",
+    "              [8,55,77,76,'girl',2],\r\n",
+    "              [9,25,57,60,'girl',1],\r\n",
+    "              [10,88,40,43,'girl',3],\r\n",
+    "              [11,25,60,45,'boy',3],\r\n",
+    "              [12,80,60,23,'boy',3],\r\n",
+    "              [13,20,90,66,'girl',3],\r\n",
+    "              [14,50,50,50,'girl',3],\r\n",
+    "              [15,89,67,77,'girl',3]],columns=['student_id','math_score','english_score','chinese_score','sex','class'])\r\n",
     "score_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "id": "Zfs1uSNPfNBL"
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "student_id         15\n",
-       "math_score         98\n",
-       "english_score      90\n",
-       "chinese_score      89\n",
-       "sex              girl\n",
-       "class               3\n",
-       "dtype: object"
+       "(student_id         15\n",
+       " math_score         98\n",
+       " english_score      90\n",
+       " chinese_score      89\n",
+       " sex              girl\n",
+       " class               3\n",
+       " dtype: object,\n",
+       " student_id         1\n",
+       " math_score        20\n",
+       " english_score     40\n",
+       " chinese_score     23\n",
+       " sex              boy\n",
+       " class              1\n",
+       " dtype: object)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#1.找出全年級各科成績最高分與最低分?\n",
-    "score_df.max()"
+    "\n",
+    "score_df.max(), score_df.min()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "student_id         1\n",
-       "math_score        20\n",
-       "english_score     40\n",
-       "chinese_score     23\n",
-       "sex              boy\n",
-       "class              1\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "score_df.min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
-    "id": "iZdLLEzYfPnW"
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 173
+    },
+    "executionInfo": {
+     "elapsed": 1116,
+     "status": "ok",
+     "timestamp": 1608456714197,
+     "user": {
+      "displayName": "献竤黃",
+      "photoUrl": "",
+      "userId": "07529243043474362942"
+     },
+     "user_tz": -480
+    },
+    "id": "iZdLLEzYfPnW",
+    "outputId": "61eac47c-1a5d-4911-a992-d40c5a828899"
    },
    "outputs": [
     {
@@ -399,23 +395,36 @@
        "3            12.5   58.666667      61.166667      50.666667"
       ]
      },
-     "execution_count": 40,
-     "metadata": {},
+     "execution_count": 6,
+     "metadata": {
+      "tags": []
+     },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#2.找出數學班平均最高的班級?\n",
-    "df = score_df.groupby('class').mean()\n",
-    "df"
+    "#2.找出數學班平均最高的班級?\r\n",
+    "#2班數學平均成績最高\r\n",
+    "score_df.groupby('class').mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
-    "id": "CWxb-2TqfbNK"
+    "id": "aBC5K-q6jFvb"
    },
+   "outputs": [],
+   "source": [
+    "#3.分析全校女生與男生國文平均差幾分?\n",
+    "#女生平均62.666667分，男生平均55.333333分，相差7.333333999999994分\n",
+    "df = score_df.groupby('sex').apply(lambda x: x.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -481,23 +490,19 @@
        "girl    9.666667   54.222222      66.444444      62.666667  2.111111"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#3.分析全校女生與男生國文平均差幾分?\n",
-    "df = score_df.groupby('sex').mean()\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "id": "aBC5K-q6jFvb"
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -505,13 +510,13 @@
        "-7.333333333333329"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['chinese_score'][0] - df['chinese_score'][1]"
+    "df['chinese_score'][0]-df['chinese_score'][1]"
    ]
   },
   {
@@ -524,8 +529,9 @@
  ],
  "metadata": {
   "colab": {
+   "authorship_tag": "ABX9TyNdYqZbzpao6RAqCgRsCq7b",
    "collapsed_sections": [],
-   "name": "作業題目.ipynb",
+   "name": "作業解答.ipynb",
    "provenance": []
   },
   "kernelspec": {
@@ -543,9 +549,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
